--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,11 @@
 language: python
+
+branches:
+  only:
+    - gh-pages
+    - /.*/
+
+install: true
+
+script:
+    - ./test/hg/bash/test-incoming.sh
