Added verify steps and trying to fix travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ branches:
   only:
     - gh-pages
     - /.*/
-
+    
 install: true
 
 script:
+    - chmod +x test/hg/bash/test-incoming.sh
     - ./test/hg/bash/test-incoming.sh
