Test with branch as parameter. Default branch name is default Bash with dash was working but there were no test for branch name with dash It seems that bat was also working. Odd. Okay, it was failing. Does powershell handle bats differently?

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,4 @@ install: true
 script:
     - chmod +x test/hg/bash/test-incoming.sh
     - ./test/hg/bash/test-incoming.sh
+    - ./test/hg/bash/test-incoming.sh with-dash
